copy back the old data

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,11 @@
 {{ define "main" }}
+
+<br>
+<i>* Last updated on 
+{{ with .GitInfo }}
+    {{ .CommitDate.Format "2006-01-02" }}
+{{ end }}
+</i>
+
 {{ .Content }}
 {{ end }}
