--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,6 +29,8 @@
   </header>
   <main>
     {{- block "main" . }}{{- end }}
+    <br>
+    <i>-> Edited on {{ .Lastmod | time.Format ":date_medium" }}</i>
   </main>
   <footer>
     {{- partial "footer.html" . -}}
